resolve layout issue with floated blocks and rows

--- a/src/blocks/rowlayout/editor.scss
+++ b/src/blocks/rowlayout/editor.scss
@@ -323,7 +323,7 @@ div.kb-blocks-bg-video {
 
 	// This max-width is used to constrain the main editor column, it should not cascade into columns
 	.block-editor-block-list__block {
-		max-width: none !important;
+		max-width: none;
 	}
 }
 
